<resources>
    <string name="app_name">CRUD-MultiTable</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_subject">CreateSubjectActivity</string>
    <string name="registration_no">NIM</string>
    <string name="email">Email</string>
    <string name="phone">No.Telepon</string>
    <string name="cross_image_content_description">Delete student from SQLite database</string>
    <string name="empty_list_message">Tidak Ada Data!</string>
    <string name="student_name">Nama Mahasiswa</string>
    <string name="update">Update</string>
    <string name="cancel_button">Batal</string>
    <string name="create_button">Tambah</string>
    <string name="all_delete">Hapus Semua</string>
    <string name="edit_button_description">Edit Data Mahasiswa</string>
    <string name="subject_name">Nama MataKuliah</string>
    <string name="subject_code">Kode MataKuliah</string>
    <string name="subject_credit">Nilai Matakuliah</string>
    <string name="add_new_subject">Tambah Matakuliah</string>
    <string name="student_information">Informasi Mahasiswa</string>
    <string name="name">Nama</string>
    <string name="registration_no_with_color">NIM: </string>
    <string name="subject_list">Data Matakuliah</string>
    <string name="student_list">Data Mahasiswa</string>
    <string name="database_summary">Total Mahasiswa: %1$d. </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_button">Update</string>
    <string name="matakuliah">MataKuliah</string>
    <string name="nim">Nim</string>
</resources>
