<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    android:padding="8dp"
    android:background="#fff">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="John Doe"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/editImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="339dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:alpha="0.5"
        android:contentDescription="@string/edit_button_description"
        app:srcCompat="@drawable/ic_mode_edit_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/crossImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:alpha="0.5"
        android:contentDescription="@string/cross_image_content_description"
        app:srcCompat="@drawable/ic_delete_forever_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <TableLayout
        android:layout_below="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">
        <TableRow>
            <TextView
                android:id="@+id/registrationNumTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/nameTextView"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/registration_no"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/registrationNumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="100145"
                app:layout_constraintTop_toBottomOf="@id/nameTextView"
                app:layout_constraintLeft_toRightOf="@id/registrationNumTitle"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/emailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/email"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="john@gmail.com"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/phoneTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/phone"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/phoneTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="01559541265"
                app:layout_constraintLeft_toRightOf="@id/phoneTitle"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>