<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:padding="8dp"
    android:background="#fff">

    <TextView
        android:id="@+id/namaMhs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        tools:text="Nama Mahasiswa"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        tools:ignore="RelativeOverlap" />


    <TableLayout
        android:layout_below="@+id/namaMhs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:id="@+id/nimTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nim"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/nimMhs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1705551031"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/mtkTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matakuliah"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/mtkMhs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Pemograman Internet"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"/>
        </TableRow>
        <TableRow>

            <TextView
                android:id="@+id/nilaiTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subject_credit"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/nilaiMhs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="3.00"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>